--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
 .robogearLine {
   display: none;
 }
+
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.textBox {
+  border: 2px solid black;
+}
