--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
-body {
-  background-color: red;
-}
-
 .robogearLine {
   display: none;
 }
@@ -11,18 +7,6 @@ img {
   max-height: 100%;
 }
 
-.robotBox {
-  height: 65vh;
-  float: left;
-}
-
 .textBox {
-  height: 60vh;
-  margin-left: 30vh;
-  background-image: url("../img/word-bubble.png");
-}
-
-.robotOutput {
-  margin-left: 20px;
-  margin-top: 40px;
+  border: 2px solid black;
 }
