--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+body {
+  background-color: red;
+}
+
 .robogearLine {
   display: none;
 }
@@ -7,6 +11,9 @@ img {
   max-height: 100%;
 }
 
-.textBox {
-  border: 2px solid black;
+#robotOutput {
+  position: absolute;
+  top: 37%;
+  left: 58%;
+  transform: translate(-50%, -50%);
 }
