--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,14 @@
-body {
-  background-color: red;
+.dayMode {
+  background-color: lightblue;
+}
+
+.nightMode {
+  background-color: black;
+  color: lightblue;
+}
+
+.dayNightButton {
+  float: right;
 }
 
 .robogearLine {
@@ -16,4 +25,5 @@ img {
   top: 37%;
   left: 58%;
   transform: translate(-50%, -50%);
+  color: black;
 }
